--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <title>MY APP</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <link rel="stylesheet" href="css/style.css">
+    <title>Pandemic Hobbies</title>
   </head>
 
   <body>
     <h1>May Node and Express be with you.</h1>
-    <form action="/posts" method="POST">
-      <input type="text" placeholder="Title" name="title" />
-      <input type="text" placeholder="Activity Name" name="activityName" />
-      <input type="text" placeholder="body" name="body" />
+    <form class="display-flex" action="/posts" method="POST">
+      <input class="marginBottom" type="text" placeholder="Title" name="title" />
+      <input class="marginBottom" type="text" placeholder="Activity Name" name="activityName" />
+      <textarea  class="marginBottom" name="body" >body</textarea>
       <button type="submit">Submit</button>
     </form>
     <ul class="posts">
