Update logIn and signUp pages

--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>21 Savage Fan Site</title>
+    <title>Pandemic Hobbies</title>
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css">
@@ -14,7 +14,11 @@
 
             <h1><span class="fa fa-sign-in"></span> Signup</h1>
 
-           
+            <% if (message.length> 0) { %>
+                <div class="alert alert-danger">
+                    <%= message %>
+                </div>
+                <% } %>
 
                     <!-- LOGIN FORM -->
                     <form action="/signup" method="post">
