--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,30 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-    <link rel="stylesheet" href="css/style.css">
-    <title>Pandemic Hobbies</title>
-  </head>
 
-  <body>
-    <h1>May Node and Express be with you.</h1>
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+  <link type="text/css" href="public/main.css">
+  <title>Pandemic Hobbies</title>
+</head>
+
+<body>
+  <h1>... they go viral</h1>
+  <% if (user && user.local.email) { %>
     <form class="display-flex" action="/posts" method="POST">
+      <input type="text" value="<%= user.local.email %>" name="name">
+
       <input class="marginBottom" type="text" placeholder="Title" name="title" />
       <input class="marginBottom" type="text" placeholder="Activity Name" name="activityName" />
-      <textarea  class="marginBottom" name="body" >body</textarea>
+      <textarea class="marginBottom" name="body">body</textarea>
       <button type="submit">Submit</button>
     </form>
-    <ul class="posts">
-      <% for(var i=0; i < posts.length; i++) {%>
-      <li class="post">
-        <span> <%= posts[i].title %> </span>:
-        <span> <%= posts[i].activityName %> </span>
-        <span> <%= posts[i].body %> </span>
-      </li>
-      <% } %>
-    </ul>
-  </body>
+    <% } %>
+      <ul class="posts">
+        <% for(var i=0; i < posts.length; i++) {%>
+          <li class="post">
+            <span>
+              <%= posts[i].email %>
+            </span>
+            <span>
+              <%= posts[i].title %>
+            </span>:
+            <span>
+              <%= posts[i].activityName %>
+            </span>
+            <span>
+              <%= posts[i].body %>
+            </span>
+          </li>
+          <% } %>
+      </ul>
+</body>
+
 </html>
