--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,51 +1,75 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
-    />
-    <link rel="stylesheet" href="css/style.css" />
-    <title>Pandemic Hobbies</title>
-  </head>
+<!doctype html>
+<html>
 
-  <body>
-    <h1>Welcome 'User'</h1>
-    <div>
-      <img />
-      <h2>Name</h2>
-      <h3>Choose a hobbie</h3>
-      <h3>My Hobbies:</h3>
+<head>
+  <title>Pademic Activity Tracker</title>
+  <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
+  <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
+  <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+  <div class="container">
+    <div class="page-header text-center">
+      <h1><span class="fa fa-anchor"></span> Profile Page</h1>
+      <a href="/logout" class="btn btn-default btn-sm">Logout</a>
     </div>
-    <form class="display-flex" action="/posts" method="POST">
-      <input
-        class="marginBottom"
-        type="text"
-        placeholder="Title"
-        name="title"
-      />
-      <input
-        class="marginBottom"
-        type="text"
-        placeholder="Activity Name"
-        name="activityName"
-      />
-      <textarea class="marginBottom" name="body">body</textarea>
-      <button type="submit">Submit</button>
-    </form>
-    <ul class="posts">
-      <% for(var i=0; i < posts.length; i++) {%> 
-        <%if ( posts[i].activityName === posts[0].activityName) { %>
 
-      <li class="post">
-        <span> <%= posts[i].title %> </span>:
-        <span> <%= posts[i].activityName %> </span>
-        <span> <%= posts[i].body %> </span>
-      </li>
-      <% } %> <% } %>
-    </ul>
-  </body>
+    <div class="row">
+
+      <!-- LOCAL INFORMATION -->
+      <div class="col-sm-6">
+        <div class="well">
+          <h3><span class="fa fa-user"></span> Local</h3>
+
+          <% if (user.local.email) { %>
+            <p>
+              <strong>id</strong>: <%= user._id %><br>
+                <strong>email</strong>: <%= user.local.email %><br>
+            </p>
+
+            <a href="/unlink/local" class="btn btn-default">Unlink</a>
+            <% } else { %>
+              <a href="/connect/local" class="btn btn-default">Connect Local</a>
+              <% } %>
+
+        </div>
+      </div>
+      <div class="col-sm-6">
+        <h3>Messages</h3>
+        <ul class="messages">
+          <% for(var i=0; i<posts.length; i++) {%>
+            <%if (posts[i].name==user.local.email) { %>
+              <li class="message">
+                <span>
+                  <%= posts[i].title %>
+                </span>
+                <span>
+                  <%= posts[i].activityName %>
+                </span>
+                <span>
+                  <%= posts[i].body %>
+                </span>
+                <button class="delete-button">Delete</button>
+                <button class="update-button">Edit</button>
+              </li>
+              <% } %>
+                <% } %>
+        </ul>
+
+        <h2>Add a message</h2>
+        <% if (user.local.email) { %>
+          <form action="/posts" method="POST">
+            <input type="text" value="<%= user.local.email %>" name="name">
+            <input type="text" placeholder="title" name="title">
+            <input class="marginBottom" type="text" placeholder="Activity Name" name="activityName" />
+            <textarea class="marginBottom" name="body">body</textarea>
+            <button type="submit">Submit</button>
+          </form>
+          <% } %>
+      </div>
+    </div>
+    <script src="main.js"></script>
+</body>
+
 </html>
